Fix the alignment when viewed on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,7 @@ section#page {
     display: grid;
     width: 100%;
     height: 100vh;
+    justify-content: center;
     grid-template-areas:
         "header header header"
         "left main right"
@@ -117,16 +118,15 @@ main h2 {
     cursor: default;
     margin-bottom: 1rem;
 }
-
 @media (width <= 646px) {
     main h2 {
         font-size: 1.5rem;
+        text-align: center;
     }
     footer {
         font-size: 0.75rem;
     }
 }
-
 main #prompt {
     height: 2rem;
     margin-top: 1.5rem;
